--- a/flower.html
+++ b/flower.html
@@ -66,20 +66,47 @@
         scene.add(directionalLight);
 
         function createflower(x, y, z) {
-            var colorary = [0xffffff, 0xfffaf0, 0xffefd5, 0xffe4b5, 0xffe4e1, 0xfdf5e6, 0xf0ffff, 0xb0c4de, 0x4169e1, 0x0000cd, 0x00bfff, 0x87ceeb, 0xafeeee, 0x00ffff, 0x00ced1, 0x008b8b, 0x008000, 0x3cb371, 0x7fffd4, 0x00ff7f, 0x32cd32, 0x6b8e23, 0xeee8aa, 0xffffe0, 0xf5deb3, 0xd2b48c, 0xffff00, 0xffa500, 0xff8c00, 0xd2691e, 0x800000, 0xb22222, 0xe9967a, 0xfa8072, 0xff6347, 0xff0000, 0xff1493, 0xffb6c1, 0xff00ff, 0xda70d6, 0x9400d3, 0x800080, 0x8a2be2, 0x7b68ee];
-            var colorcode = Math.floor(Math.random() * (colorary.length - 3));
+            var colorary = [0xffffff, 0xfffaf0, 0xffefd5, 0xffe4b5, 0xffe4e1, 0xfdf5e6, 0xfffff0, 0xf0fff0, 0xf0ffff, 0xfff8dc, 0xafeeee, 0x98fb98, 0xeee8aa, 0xfffacd, 0xb0c4de, 0x4682b4, 0x00bfff, 0x87ceeb, 0x40e0d0, 0x00ced1, 0x008b8b, 0x8fbc8f, 0x9acd32, 0x6b8e23, 0xd2b48c, 0xffd700, 0xffa500, 0xff8c00, 0xcd853f, 0xa0522d, 0xcd5c5c, 0xe9967a, 0xfa8072, 0xff7f50, 0xdc143c, 0xdb7093, 0xffc0cb, 0xee82ee, 0xdda0dd, 0x9370db, 0x7b68ee];
+            var colorcode = Math.floor(Math.random() * colorary.length);
             console.log(colorcode);
-            const kazaguruma_geometry = new THREE.TorusKnotGeometry(0.3, 0.1, 23, 6, 3, 5);
+            const kazaguruma_geometry = new THREE.TorusKnotGeometry(0.15, 0.1, 23, 6, 3, 5);
             const kazaguruma_material = new THREE.MeshBasicMaterial({ color: colorary[colorcode] });
             const kazaguruma = new THREE.Mesh(kazaguruma_geometry, kazaguruma_material);
-            const kazagurumaflame_geometry = new THREE.TorusKnotGeometry(0.3, 0.1, 23, 6, 3, 5);
-            const kazagurumaflame_material = new THREE.MeshBasicMaterial({ color: 0xfafafa });
+            const kazagurumaflame_geometry = new THREE.TorusKnotGeometry(0.15, 0.1, 23, 6, 3, 5);
+            var linecolor = 0xc0c0c0;
+            if (colorcode <= 13) {
+                linecolor = 0xc0c0c0;
+            }
+            if (colorcode > 13) {
+                linecolor = 0xfafafa;
+            }
+            const kazagurumaflame_material = new THREE.MeshBasicMaterial({ color: linecolor });
             kazagurumaflame_material.wireframe = true;
             const kazagurumaflame = new THREE.Mesh(kazagurumaflame_geometry, kazagurumaflame_material);
             kazaguruma.add(kazagurumaflame);
             markerRoot.add(kazaguruma);
-            kazaguruma.rotation.x += Math.PI / 180 * 45;
+            kazaguruma.rotation.x += Math.PI / 180 * 60;
             kazaguruma.position.set(x, y, z);
+            const geometry = new THREE.SphereGeometry(0.5, 30, 16, 2.34362811957799, 1.64619455048105, 2.4, 0.8);
+            const material = new THREE.MeshBasicMaterial({ side: THREE.DoubleSide, color: 0x3cb371 });
+            const reef = new THREE.Mesh(geometry, material);
+            reef.rotation.y -= Math.PI / 180 * 45;
+            reef.rotation.x -= Math.PI / 180 * 90;
+            reef.position.z += -0.35;
+            reef.position.y += -0.035;
+            reef.position.x += 0.;
+            const geometry1 = new THREE.SphereGeometry(0.5, 30, 16, 2.34362811957799, 1.34619455048105, 2.4, 0.8);
+            const material1 = new THREE.MeshBasicMaterial({ side: THREE.DoubleSide, color: 0x3cb371 });
+            const reef1 = new THREE.Mesh(geometry1, material1);
+            kazaguruma.add(reef1);
+            reef1.rotation.y += Math.PI / 180 * 15;
+            reef1.rotation.x += Math.PI / 180 * 105;
+            reef1.position.z += -0.35;
+            reef1.position.y += 0.05;
+            reef1.position.x += -0.11;
+            reef1.rotation.z -= Math.PI / 180 * 200;
+            kazaguruma.add(reef);
+
         }
 
         function animate() {
@@ -93,8 +120,8 @@
             let mouseX = ret.clientX;                           // マウスのx座標
             let mouseY = ret.clientY;                           // マウスのy座標
             //console.log(mouseX + " : " + mouseY);
-            mouseX = (mouseX / window.innerWidth) * 4 - 2;    // -1 ～ +1 に正規化されたx座標
-            mouseY = -(mouseY / window.innerHeight) * 4 + 2;    // -1 ～ +1 に正規化されたy座標
+            mouseX = (mouseX / window.innerWidth) * 2 - 1;    // -1 ～ +1 に正規化されたx座標
+            mouseY = -(mouseY / window.innerHeight) * 2 + 1;    // -1 ～ +1 に正規化されたy座標
             let pos = new THREE.Vector3(mouseX, mouseY, 1);     // マウスベクトル
             let x = pos.getComponent(0);
             let y = pos.getComponent(2);
